2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: Remove enableProgramming()/disableProgramming()
	calls in fuse handling; the respective backend jtagRead()/jtagWrite()
	functions are in charge of deciding whether they need a programming
	mode or not
	* src/jtag3io.cc: fix device ID recognition when operating on
	debugWIRE targets; activate the #ifdef'ed out jtagActivateOcdenFuse
	call; only call CMD3_START_DEBUG for debugWIRE; at the end of
	initialization, attempt resetProgram() a second time if the first
	time failed (appears to be needed after just activating the OCDEN
	fuse)

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3rw.cc(jtag3::jtagWrite): fix off-by-one error that lead
	to writing wrong data
	* src/remote.cc: Implement GDB 7+ flash write protocol

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/remote.cc: Implement the "monitor" GDB command.

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h (struct breakpoint2): Introduce the has_mask flag.
	* src/jtaggeneric.cc: Fix the logic to commit data mask breakpoints
	to the ICE.

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc: Centralize addBreakpoint(), deleteBreakpoint(),
	and layoutBreakpoints() as they are common between the JTAGICE mkII
	and JTAGICE3.
	* src/jtag2.h: (Dito.)
	* src/jtag3.h: (Dito.)
	* src/jtag.h: (Dito.)
	* src/jtag2bp.cc: (Dito.)
	* src/jtag3io.cc: (Dito.)
	* src/jtaggeneric.cc: (Dito.)
	* src/jtag3bp.cc: (Dito.)

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag.h: Remove codeBreakpointBetween() and stopAt() methods
	* jtag1.h: (Dito.)
	* jtag2.h: (Dito.)
	* jtag3.h: (Dito.)
	* jtagbp.cc: (Dito.)
	* jtagio.cc: (Dito.)
	* jtag2bp.cc: (Dito.)
	* jtag2io.cc: (Dito.)
	* jtag3bp.cc: (Dito.)
	* jtag3io.cc: (Dito.)

2013-01-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version.

2013-01-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
